# MShareware

./: MBlowfish.cpp  MBlowfish.h  MSha256.h  MShareware.cpp  MShareware.h  MShareware.rc  README.txt  index.html
samples/MyApp-after/: CMakeLists.txt  MSha256.cpp  MShareware.rc  MyApp.cpp  mdbg.h
samples/MyApp-before/: AntiRE.h  CMakeLists.txt  MCenterWindow.h  MyApp.cpp  MyApp.h  MyApp_res.rc  README.md  resource.h
user-guide/: aboutsw.html  base.css  buybybank.html  buybycard.html  getgmail.html  getyahoomail.html  index.html  share_finish-dontusecard.html  share_finish-usecard.html  share_step01-nomail.html  share_step01.html  share_step02-noaccount.html  share_step02.html  share_step03.html
